--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Palindrome Checker</title>
     <link rel="stylesheet" href="./palindrome.css" />
     <link href="https://unpkg.com/nes.css@0.0.2/css/nes.min.css" rel="stylesheet" />
+    <link rel="icon" href="./starship.gif">
   </head>
   <body>
     <div class="wrapper">
